@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020170126"
-#define public MagickPackageReleaseDate "snapshot-20170126"
+#define public MagickPackageVersionAddendum ".020170129"
+#define public MagickPackageReleaseDate "snapshot-20170129"
