@@ -1,4 +1,4 @@
-.TH gm 1 "2017/01/01" "GraphicsMagick"
+.TH gm 1 "2017/01/29" "GraphicsMagick"
 .TP
 .in 15
 .in 15
@@ -2539,11 +2539,11 @@ By default, the width and height are maximum values. That is, the
 image is expanded or contracted to fit the width and height value
 while maintaining the aspect ratio of the image.
 
-Append a ^ to the geometry so that the image is resized while
-maintaining the aspect ratio of the image, but the resulting width or
+Append a ^ to the geometry so that the image aspect ratio is
+maintained when the image is resized, but the resulting width or
 height are treated as minimum values rather than maximum values.
 
-Append an exclamation point to the geometry to force the image size to
+Append a ! (exclamation point) to the geometry to force the image size to
 exactly the size you specify. For example, if you specify
 640x480! the image width is set to 640 pixels and height to
 480.
