@@ -2835,11 +2835,11 @@ By default, the width and height are maximum values. That is, the
 image is expanded or contracted to fit the width and height value
 while maintaining the aspect ratio of the image.</font></td></tr></table>
 <table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">
-Append a ^ to the geometry so that the image is resized while
-maintaining the aspect ratio of the image, but the resulting width or
+Append a ^ to the geometry so that the image aspect ratio is
+maintained when the image is resized, but the resulting width or
 height are treated as minimum values rather than maximum values.</font></td></tr></table>
 <table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">
-Append an exclamation point to the geometry to force the image size to
+Append a ! (exclamation point) to the geometry to force the image size to
 exactly the size you specify. For example, if you specify
 <tt>640x480!</tt> the image width is set to 640 pixels and height to
 480.</font></td></tr></table>
